--- a/src/Footer/styles.module.scss
+++ b/src/Footer/styles.module.scss
@@ -8,20 +8,22 @@
     text-align: center;
     margin-top: 250px;
 
-    @media (ax-width: 320px) {
+    @media (max-width: 768px) {
       height: auto;
     }
-
-    @media (ax-width: 375px) {
+    
+    @media (max-width: 425px) {
       height: auto;
     }
-
-    @media (ax-width: 425px) {
+    
+    @media (max-width: 375px) {
       height: auto;
+      margin-top: 150px;
     }
-
-    @media (ax-width: 768px) {
+    
+    @media (max-width: 320px) {
       height: auto;
+      margin-top: 150px;
     }
   }
 
@@ -53,25 +55,30 @@
     justify-content: center;
     align-items: center;
 
-    @media (max-width: 320px) {
+    @media (max-width: 768px) {
+    justify-content: space-between;
+    width: 100%;
+    flex-wrap: wrap;
+    }
+    
+    @media (max-width: 425px) {
       flex-direction: column;
     }
-
+    
     @media (max-width: 375px) {
       flex-direction: column;
     }
-
-    @media (max-width: 425px) {
-    flex-direction: column;
+     
+    @media (max-width: 320px) {
+      flex-direction: column;
     }
-
-    @media (max-width: 768px) {
-    flex-direction: column;
-    }
-
   }
   
   .contato {
+
+    @media (max-width: 768px) {
+      gap: 20px;
+    }
 
     .divIconContato {
       width: 75px;
@@ -84,45 +91,45 @@
       margin: 0 auto;
       margin-bottom: 10px;
 
+      @media (max-width: 768px) {
+        width: 70px;
+        height: 70px;
+      }
+      
+      @media (max-width: 425px) {
+        width: 65px;
+        height: 65px;
+      }
+      
+      @media (max-width: 375px) {
+        width: 55px;
+        height: 55px;
+      }
+      
       @media (max-width: 320px) {
         width: 45px;
         height: 35px;
     }
-
-    @media (max-width: 375px) {
-      width: 55px;
-      height: 55px;
-  }
-
-  @media (max-width: 425px) {
-    width: 65px;
-    height: 65px;
-}
-
-@media (max-width: 768px) {
-  width: 70px;
-  height: 70px;
-}
   
       .iconContato {
         width: 40px;
         height: 40px;
         color: var(--LightCyan);
 
+        @media (max-width: 425px) {
+          width: 35px;
+          height: 35px;
+        }
+        
+        @media (max-width: 375px) {
+          width: 30px;
+          height: 30px;
+        }
+    
         @media (max-width: 320px) {
           width: 25px;
           height: 25px;
-      }
-
-      @media (max-width: 375px) {
-        width: 30px;
-        height: 30px;
-    }
-
-    @media (max-width: 425px) {
-      width: 35px;
-      height: 35px;
-  }
+        }
 
       }
     }
@@ -134,53 +141,59 @@
       flex-direction: column;
       align-items: center;
       width: 280px;
-
+      
+      @media (max-width: 768px) {
+        width: 100%;
+        height: 250px;
+      }
+      
+      @media (max-width: 425px) {
+        width: 230px;
+        height: 230px;
+      }
+      
+      @media (max-width: 375px) {
+        width: 200px;
+        height: 200px;
+      }
+      
       @media (max-width: 320px) {
         width: 180px;
         height: 180px;
     }
-
-    @media (max-width: 375px) {
-      width: 200px;
-      height: 200px;
-  }
-
-  @media (max-width: 425px) {
-    width: 230px;
-    height: 230px;
-}
-
-@media (max-width: 768px) {
-  width: 250px;
-  height: 250px;
-}
-    
+      
     h4 {
       margin-top: 15px;
       margin-bottom: 15px;
       color: var(--theme-text);
     }
+
+    #email{
+      @media (max-width: 768px) {
+        font-size: 13px;
+      }
+    }
     
     p {
       color: var(--Cyan-write);
       
-      @media (max-width: 320px) {
-        font-size: 16px;
+      @media (max-width: 768px) {
+        font-size: 21px;
         font-weight: 300;
       }
-
-      @media (max-width: 375px) {
-        font-size: 18px;
-        font-weight: 300;
-      }
-
+      
       @media (max-width: 425px) {
         font-size: 19px;
         font-weight: 300;
       }
-
-      @media (max-width: 768px) {
-        font-size: 21px;
+      
+      @media (max-width: 375px) {
+        font-size: 18px;
+        font-weight: 300;
+      }
+      
+      @media (max-width: 320px) {
+        font-size: 16px;
         font-weight: 300;
       }
     }
