--- a/src/ModalProjects/styles.module.scss
+++ b/src/ModalProjects/styles.module.scss
@@ -12,7 +12,23 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    @media (max-width: 768px) {
+        width: 100%;
+    }
     
+    
+    @media (max-width: 425px) {
+        width: 100%;
+    }
+    
+    @media (max-width: 375px) {
+        width: 100%;
+    }
+    
+    @media (max-width: 320px) {
+        width: 100%;
+    }
 
     .modalContent {
         background-color: var(--DarkCyans);
@@ -21,6 +37,18 @@
         padding: 40px;
         position: relative;
 
+        @media (max-width: 425px) {
+            width: 100%;
+        }
+        
+        @media (max-width: 375px) {
+            width: 100%;
+        }
+        
+        @media (max-width: 375px) {
+            width: 100%;
+        }
+        
         @media (max-width: 320px) {
             width: 100%;
         }
@@ -35,23 +63,61 @@
             border: none;
             cursor: pointer;
             font-size: 1.5rem;
-            background: var(--Cyan-write);
+            background: linear-gradient(-1855deg, var(--StrongCyan), var(--LightCyan));
             border-radius: 40px;
             padding: 10px;
 
-            @media (max-width: 320px) {
-                right: 20px;
+            @media (max-width: 1024px) {
+                right: 8%;
                 padding: 5px;
                 width: 40px;
-                top: 265px;
+                top: 32%;
+            }
+            
+            @media (max-width: 768px) {
+                right: 8%;
+                padding: 5px;
+                width: 40px;
+                top: 27%;
+            }
+            
+            @media (max-width: 425px) {
+                right: 13%;
+                padding: 5px;
+                width: 30px;
+                height: 30px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                top: 30%;
             }
 
             @media (max-width: 375px) {
-                right: 20px;
+                right: 10%;
                 padding: 5px;
-                width: 40px;
-                top: 205px;
+                width: 30px;
+                height: 30px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                top: 30%;
             }
+
+            @media (max-width: 320px) {
+                right: 10%;
+                padding: 5px;
+                width: 30px;
+                height: 30px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                top: 26%;
+            }
+        }
+
+        .closeButton:hover{
+            transition: transform 0.5s;
+            background: var(--Cyan-write);
         }
 
         .modalCenter {
@@ -60,7 +126,17 @@
             align-items: center;
             width: 100%;
 
-            @media (max-width: 320px) {
+            @media (max-width: 1024px) {
+                flex-direction: column;
+                margin-top: 450px;
+            }
+            
+            @media (max-width: 768px) {
+                flex-direction: column;
+                margin-top: 350px;
+            }
+
+            @media (max-width: 425px) {
                 flex-direction: column;
             }
 
@@ -68,11 +144,36 @@
                 flex-direction: column;
             }
 
+            @media (max-width: 320px) {
+                flex-direction: column;
+                margin-top: 150px;
+            }
+
+
+
+
             .left {
                 width: 55%;
 
+                @media (max-width: 1024px) {
+                    width: 90%;
+                }
+
+                @media (max-width: 768px) {
+                    width: 90%;
+                }
+
+                @media (max-width: 425px) {
+                    width: 90%;
+                }
+
+                
                 @media (max-width: 375px) {
-                    width: 75%;
+                    width: 90%;
+                }
+
+                @media (max-width: 320px) {
+                    width: 90%;
                 }
 
                 video {
@@ -80,18 +181,38 @@
                     height: 300px;
                     margin-bottom: 20px;
 
-                    @media (max-width: 320px) {
-                        width: 260px;
-                        height: 220px;
-                        margin-top: 250px;
-                        margin-left: -55px;
+                    @media (max-width: 1024px) {
+                        width: 800px;
+                        height: 300px;
+                        margin-left: -30px;
+                        margin-bottom: 50px;
+                        margin-top: 50px;
+                    }
+
+                    @media (max-width: 768px) {
+                        width: 600px;
+                        height: 240px;
+                        margin-left: -27px;
+                        margin-bottom: 50px;
+                    }
+
+                    @media (max-width: 425px) {
+                        width: 350px;
+                        height: 230px;
+                        margin-left: -17px;
                     }
 
                     @media (max-width: 375px) {
+                        width: 310px;
+                        height: 220px;
+                        margin-left: -18px;
+                    }
+
+                    @media (max-width: 320px) {
                         width: 270px;
                         height: 220px;
-                        margin-top: 250px;
-                        margin-left: -10px;
+                        margin-left: -12px;
+                        margin-top: 120px;
                     }
                 }
 
@@ -101,17 +222,34 @@
                     align-items: center;
                     width: 90%;
 
-                    @media (max-width: 320px) {
+                    @media (max-width: 1024px) {
+                        gap: 20px;
+                        width: 100%;
+                    }
+
+                    @media (max-width: 768px) {
+                        gap: 20px;
+                        width: 100%;
+                    }
+                    
+                    @media (max-width: 425px) {
                         flex-direction: column;
                         gap: 20px;
+                        width: 100%;
                     }
 
                     @media (max-width: 375px) {
-                        justify-content: space-evenly;
+                        flex-direction: column;
                         gap: 20px;
-                        width: 500px;
-                        margin-left: -90px;
+                        margin-left: -50px;
                     }
+                    
+                    @media (max-width: 320px) {
+                        flex-direction: column;
+                        gap: 20px;
+                        margin-left: -45px;
+                    }
+
 
                     a {
                         background: linear-gradient(-1855deg, var(--StrongCyan), var(--LightCyan));
@@ -121,15 +259,16 @@
                         align-items: center;
                         color: var(--White-write);
 
-                        @media (max-width: 320px) {
-                            margin-right: -25px;
-                        }
-
+                        
                         @media (max-width: 375px) {
                             width: 200px;
                             height: 50px;
                             font-size: 16px;
-                            margin-right: 120px;
+                            margin-left: 95px;
+                        }
+                        
+                        @media (max-width: 320px) {
+                            margin-left: 100px;
                         }
 
                     }
@@ -142,29 +281,55 @@
                 flex-direction: column;
                 align-items: center;
 
-                @media (max-width: 320px) {
-                    width: 100%;
+                @media (max-width: 1024px) {
+                    width: 80%;
+                    margin: 0 auto;
                 }
 
-                @media (max-width: 375px) {
-                    width: 100%;
+                @media (max-width: 768px) {
+                    width: 80%;
+                    margin: 0 auto;
                 }
 
                 h2 {
                     margin-top: 0px;
                     color: var(--theme-text);
-                    
-                    @media (max-width: 320px) {
+
+                    @media (max-width: 1024px) {
                         font-size: 25px;
-                        width: 80%;
+                        width: 100%;
+                        margin-top: 60px;
+                        margin-right: -10px;
+                        margin-bottom: 20px;
+                    }
+                    
+                    @media (max-width: 768px) {
+                        font-size: 25px;
+                        width: 100%;
+                        margin-top: 60px;
+                        margin-right: -10px;
+                        margin-bottom: 20px;
+                    }
+                    
+                    @media (max-width: 425px) {
+                        font-size: 25px;
+                        width: 100%;
                         margin-top: 40px;
                         margin-right: -10px;
                         margin-bottom: 20px;
                     }
 
                     @media (max-width: 375px) {
+                        width: 100%;
                         font-size: 25px;
-                        width: 80%;
+                        margin-top: 40px;
+                        margin-right: -10px;
+                        margin-bottom: 20px;
+                    }
+                    
+                    @media (max-width: 320px) {
+                        font-size: 25px;
+                        width: 100%;
                         margin-top: 40px;
                         margin-right: -10px;
                         margin-bottom: 20px;
@@ -175,7 +340,23 @@
                     color: var(--Cyan-write);
                     font-size: 14px;
 
-                    @media (max-width: 320px) {
+                    @media (max-width: 1024px) {
+                        font-size: 12px;
+                        height: 250px;
+                        overflow-y: auto;
+                        text-align: center;
+                        margin-top: 20px;
+                    }
+                    
+                    @media (max-width: 768px) {
+                        font-size: 12px;
+                        height: 250px;
+                        overflow-y: auto;
+                        text-align: center;
+                        margin-top: 20px;
+                    }
+                    
+                    @media (max-width: 425px) {
                         font-size: 12px;
                         height: 250px;
                         overflow-y: auto;
@@ -183,6 +364,13 @@
                     }
 
                     @media (max-width: 375px) {
+                        font-size: 12px;
+                        height: 250px;
+                        overflow-y: auto;
+                        text-align: center;
+                    }
+                    
+                    @media (max-width: 320px) {
                         font-size: 12px;
                         height: 250px;
                         overflow-y: auto;
