--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -24,19 +24,20 @@ header {
           height: 100px;
           background-color: transparent;
 
-          @media (max-width: 320px) {
-            width: 40px;
-            height: 70px;
-          }
-          @media (max-width: 375px) {
-            width: 80px;
+          @media (max-width: 425px) {
+            width: 100px;
             height: 90px;
           }
-          @media (max-width: 425px) {
-            width: 120px;
-            height: 100px;
-          }
 
+          @media (max-width: 375px) {
+            width: 85px;
+            height: 75px;
+          }
+          
+          @media (max-width: 320px) {
+            width: 80px;
+            height: 70px;
+          }
         }
   
         .iconContainer {
@@ -112,7 +113,7 @@ header {
             font-family: var(--heading-font);
             font-size: 18px;
             font-weight: 400;
-            color: var(--theme-text);
+            color: var(--White-write);
             cursor: pointer;
             transition: transform 0.3s ease, font-size 0.3s ease;
             box-sizing: border-box; 
@@ -144,7 +145,7 @@ header {
       right: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.65);
+      background-color: rgba(0, 0, 0, 0.603);
       backdrop-filter: blur(10px);
       justify-content: center;
       align-items: center; 
@@ -158,6 +159,7 @@ header {
         font-size: 30px;
         text-align: center;
         margin-bottom: 40px;
+        color: var(--LightCyan);
       }
 
       li{
@@ -168,24 +170,32 @@ header {
         transform: translateX(0);
       }
     }
+  }
 
-    @media (max-width: 320px) {
-        .navMenu.active {
-            margin-bottom: 40px;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.65);
-            backdrop-filter: blur(10px);
+  @media (max-width: 425px) {
+    .navMenu.active {
+      h3{
+        font-size: 26px;
+      }
 
-            h3{
-                width: 85%;
-                font-size: 22px;
-              }
-        
-              li{
-                  font-size: 32px;
-              }
-          }
+    }
+  }
 
-        }
+  @media (max-width: 375px) {
+    .navMenu.active {
+      h3{
+        font-size: 23px;
+      }
+
+    }
+  }
+
+  @media (max-width: 320px) {
+    .navMenu.active {
+      h3{
+        font-size: 20px;
+      }
+
+    }
   }
   
