--- a/src/components/Portfolio/myProjects/styles.module.scss
+++ b/src/components/Portfolio/myProjects/styles.module.scss
@@ -1,21 +1,25 @@
 article {
     width: 100%;
+
+    @media (max-width: 1024px) {
+        height: auto;
+      }
+    
+    @media (max-width: 768px) {
+      height: auto;
+    }
+    
+    @media (max-width: 425px) {
+        height: auto;
+    }
+    
+    @media (max-width: 375px) {
+        height: auto;
+    }
     
     @media (max-width: 320px) {
         height: auto;
     }
-
-    @media (max-width: 375px) {
-        height: auto;
-      }
-      
-      @media (max-width: 425px) {
-        height: auto;
-      }
-      
-      @media (max-width: 768px) {
-        height: auto;
-      }
     
     .Container_FrontEnd {
         width: 85%;
@@ -36,22 +40,27 @@ article {
             width: 60%;
             margin: 0 auto;
 
-            @media (max-width: 320px) {
-                width: 100%;
-                gap: 5px;
-            }
-
-            @media (max-width: 375px) {
-                width: 100%;
-                gap: 5px;
-            }
-
-            @media (max-width: 425px) {
+            @media (max-width: 1024px) {
                 width: 100%;
                 gap: 5px;
             }
 
             @media (max-width: 768px) {
+                width: 100%;
+                gap: 5px;
+            }
+            
+            @media (max-width: 425px) {
+                width: 100%;
+                gap: 5px;
+            }
+            
+            @media (max-width: 375px) {
+                width: 100%;
+                gap: 5px;
+            }
+            
+            @media (max-width: 320px) {
                 width: 100%;
                 gap: 5px;
             }
@@ -69,22 +78,25 @@ article {
                     color: var(--Cyan-write);
                 }
 
-                @media (max-width: 320px) {
-                    font-size: 100px;
-                }
-
-                @media (max-width: 375px) {
-                    font-size: 100px;
-                }
-
-                @media (max-width: 425px) {
-                    font-size: 100px;
+                @media (max-width: 1024px) {
+                    font-size: 120px;
                 }
 
                 @media (max-width: 768px) {
                     font-size: 100px;
                 }
-
+                
+                @media (max-width: 425px) {
+                    font-size: 100px;
+                }
+                
+                @media (max-width: 375px) {
+                    font-size: 100px;
+                }
+                   
+                @media (max-width: 320px) {
+                    font-size: 100px;
+                }
             }
             
             .skillsImgProject {
@@ -92,46 +104,34 @@ article {
                 display: inline-block;
                 overflow: hidden;
                 margin-bottom: 40px;
-
-                @media (max-width: 320px) {
-                    width: 100%;
-                }
-
-                @media (max-width: 375px) {
-                    width: 100%;
-                }
-
-                @media (max-width: 425px) {
-                    width: 100%;
-                }
-
-                @media (max-width: 768px) {
-                    width: 100%;
-                }
                 
                 img {
                     width: 530px;
                     height: 350px;
                     transition: transform 0.3s ease, filter 0.3s ease;
                     filter: brightness(10%);
-                    border-radius: 5px;
+                    border-radius: 15px;
 
-                    @media (max-width: 320px) {
+                    @media (max-width: 1024px) {
                         width: 100%;
-                        height: 200px;
                     }
 
-                    @media (max-width: 375px) {
+                    @media (max-width: 768px) {
                         width: 100%;
-                        height: 200px;
+                        height: 280px;
                     }
-
+                    
                     @media (max-width: 425px) {
                         width: 100%;
                         height: 200px;
                     }
-
-                    @media (max-width: 768px) {
+                    
+                    @media (max-width: 375px) {
+                        width: 100%;
+                        height: 200px;
+                    }
+                    
+                    @media (max-width: 320px) {
                         width: 100%;
                         height: 200px;
                     }
@@ -169,20 +169,24 @@ article {
                         margin-top: 10px;
                         font-size: 45px;
 
-                        @media (max-width: 320px) {
-                            font-size: 20px;
-                        }
-
-                        @media (max-width: 375px) {
-                            font-size: 22px;
-                        }
-
-                        @media (max-width: 425px) {
-                            font-size: 24px;
+                        @media (max-width: 1024px) {
+                            font-size: 42px;
                         }
 
                         @media (max-width: 768px) {
-                            font-size: 26px;
+                            font-size: 38px;
+                        }
+                        
+                        @media (max-width: 425px) {
+                            font-size: 24px;
+                        }
+                        
+                        @media (max-width: 375px) {
+                            font-size: 22px;
+                        }
+                        
+                        @media (max-width: 320px) {
+                            font-size: 20px;
                         }
                     }
                     
@@ -194,6 +198,22 @@ article {
                         margin-top: 15px;
                         color: var(--LightCyan);
 
+                        @media (max-width: 1024px) {
+                            gap: 10px;
+                        }
+
+                        @media (max-width: 768px) {
+                            gap: 10px;
+                        }
+                        
+                        @media (max-width: 425px) {
+                            gap: 8px;
+                        }
+                        
+                        @media (max-width: 375px) {
+                            gap: 5px;
+                        }
+                        
                         @media (max-width: 320px) {
                             gap: 0;
                         }
@@ -203,24 +223,29 @@ article {
                             height: 50px;
                             font-weight: 600;
 
-                            @media (max-width: 320px) {
-                                width: 30px;
-                                height: 30px;
-                            }
-
-                            @media (max-width: 375px) {
-                                width: 30px;
-                                height: 30px;
-                            }
-
-                            @media (max-width: 425px) {
-                                width: 30px;
-                                height: 30px;
+                            @media (max-width: 1024px) {
+                                width: 60px;
+                                height: 40px;
                             }
 
                             @media (max-width: 768px) {
                                 width: 40px;
                                 height: 40px;
+                            }
+                            
+                            @media (max-width: 425px) {
+                                width: 30px;
+                                height: 30px;
+                            }
+                            
+                            @media (max-width: 375px) {
+                                width: 30px;
+                                height: 30px;
+                            }
+                            
+                            @media (max-width: 320px) {
+                                width: 30px;
+                                height: 30px;
                             }
                         }
                     }
@@ -260,36 +285,42 @@ article {
                     height: 60px;
                     font-size: 28px;
 
-                    @media (max-width: 320px) {
+                    @media (max-width: 1024px) {
+                        margin-left: -20px;
+                        bottom: 0;
+                        height: 50px;
+                        font-size: 24px;
+                    }
+                    
+                    @media (max-width: 768px) {
+                        font-size: 20px;
+                        height: 45px;
+                        bottom: 0;
+                        left: 25%;
+                        margin-left: 60px;
+                    }
+                    
+                    @media (max-width: 425px) {
                         font-size: 14px;
                         width: 100px;
-                        left: -25%;
-                        margin-right: -90px;
+                        height: 40px;
+                        left: 25%;
+                        margin-left: 17px;
                     }
 
                     @media (max-width: 375px) {
                         font-size: 14px;
                         width: 100px;
-                        bottom: 10px;
-                        right: 50px;
-
+                        left: 25%;
+                        height: 35px;
+                        margin-left: 9px;
                     }
-
-                    @media (max-width: 425px) {
+  
+                    @media (max-width: 320px) {
                         font-size: 14px;
                         width: 100px;
-                        height: 40px;
-                        bottom: 0;
-                        left: 25%;
-                        margin-left: 17px;
-                    }
-
-                    @media (max-width: 768px) {
-                        font-size: 14px;
-                        height: 40px;
-                        bottom: 0;
-                        left: 25%;
-                        margin-left: 60px;
+                        left: 17%;
+                        height: 35px;
                     }
                 }
             }
@@ -323,22 +354,27 @@ article {
             width: 60%;
             margin: 0 auto;
 
-            @media (max-width: 320px) {
-                width: 100%;
-                gap: 5px;
-            }
-
-            @media (max-width: 375px) {
-                width: 100%;
-                gap: 5px;
-            }
-
-            @media (max-width: 425px) {
+            @media (max-width: 1024px) {
                 width: 100%;
                 gap: 5px;
             }
 
             @media (max-width: 768px) {
+                width: 100%;
+                gap: 5px;
+            }
+            
+            @media (max-width: 425px) {
+                width: 100%;
+                gap: 5px;
+            }
+            
+            @media (max-width: 375px) {
+                width: 100%;
+                gap: 5px;
+            }
+            
+            @media (max-width: 320px) {
                 width: 100%;
                 gap: 5px;
             }
@@ -355,6 +391,22 @@ article {
                 &:hover {
                     color: var(--Cyan-write);
                 }
+
+                @media (max-width: 320px) {
+                    font-size: 100px;
+                }
+
+                @media (max-width: 375px) {
+                    font-size: 100px;
+                }
+
+                @media (max-width: 425px) {
+                    font-size: 100px;
+                }
+
+                @media (max-width: 768px) {
+                    font-size: 100px;
+                }
             }
             
             .skillsImgProject {
@@ -366,13 +418,45 @@ article {
                 @media (max-width: 320px) {
                     width: 100%;
                 }
+
+                @media (max-width: 375px) {
+                    width: 100%;
+                }
+
+                @media (max-width: 425px) {
+                    width: 100%;
+                }
+
+                @media (max-width: 768px) {
+                    width: 100%;
+                }
                 
                 img {
                     width: 530px;
                     height: 350px;
                     transition: transform 0.3s ease, filter 0.3s ease;
                     filter: brightness(10%);
+                    border-radius: 15px;
 
+                    @media (max-width: 1024px) {
+                        width: 100%;
+                    }
+
+                    @media (max-width: 768px) {
+                        width: 100%;
+                        height: 280px;
+                    }
+                    
+                    @media (max-width: 425px) {
+                        width: 100%;
+                        height: 200px;
+                    }
+                    
+                    @media (max-width: 375px) {
+                        width: 100%;
+                        height: 200px;
+                    }
+                    
                     @media (max-width: 320px) {
                         width: 100%;
                         height: 200px;
@@ -409,6 +493,26 @@ article {
                         color: var(--White-write);
                         font-weight: 600;
                         margin-top: 10px;
+
+                        @media (max-width: 1024px) {
+                            font-size: 34px;
+                        }
+
+                        @media (max-width: 768px) {
+                            font-size: 26px;
+                        }
+                        
+                        @media (max-width: 425px) {
+                            font-size: 22px;
+                        }
+                        
+                        @media (max-width: 375px) {
+                            font-size: 20px;
+                        }
+                        
+                        @media (max-width: 320px) {
+                            font-size: 18px;
+                        }
                     }
                     
                     .iconsProjects {
@@ -418,11 +522,56 @@ article {
                         gap: 15px;
                         margin-top: 15px;
                         color: var(--LightCyan);
+
+                        @media (max-width: 1024px) {
+                            gap: 10px;
+                        }
+
+                        @media (max-width: 768px) {
+                            gap: 10px;
+                        }
+                        
+                        @media (max-width: 425px) {
+                            gap: 8px;
+                        }
+                        
+                        @media (max-width: 375px) {
+                            gap: 5px;
+                        }
+                        
+                        @media (max-width: 320px) {
+                            gap: 5px;
+                        }
                         
                         .i {
                             width: 30px;
                             height: 30px;
                             font-weight: 600;
+
+                            @media (max-width: 1024px) {
+                                width: 60px;
+                                height: 40px;
+                            }
+
+                            @media (max-width: 768px) {
+                                width: 40px;
+                                height: 40px;
+                            }
+                            
+                            @media (max-width: 425px) {
+                                width: 30px;
+                                height: 30px;
+                            }
+                            
+                            @media (max-width: 375px) {
+                                width: 30px;
+                                height: 30px;
+                            }
+                            
+                            @media (max-width: 320px) {
+                                width: 27px;
+                                height: 27px;
+                            }
                         }
                     }
                 }
@@ -450,7 +599,7 @@ article {
                     left: 35%;
                     transform: translateX(-50%);
                     padding: 10px 20px;
-                    background-color: var(--LightCyan);
+                    background: linear-gradient(-1855deg, var(--StrongCyan), var(--LightCyan));
                     color: var(--White-write);
                     border: none;
                     cursor: pointer;
@@ -460,6 +609,44 @@ article {
                     width: 150px;
                     height: 60px;
                     font-size: 28px;
+
+                    @media (max-width: 1024px) {
+                        margin-left: -20px;
+                        bottom: 0;
+                        height: 50px;
+                        font-size: 24px;
+                    }
+                    
+                    @media (max-width: 768px) {
+                        font-size: 20px;
+                        height: 45px;
+                        bottom: 0;
+                        left: 25%;
+                        margin-left: 60px;
+                    }
+                    
+                    @media (max-width: 425px) {
+                        font-size: 14px;
+                        width: 100px;
+                        height: 40px;
+                        left: 25%;
+                        margin-left: 17px;
+                    }
+
+                    @media (max-width: 375px) {
+                        font-size: 14px;
+                        width: 100px;
+                        left: 25%;
+                        height: 35px;
+                        margin-left: 9px;
+                    }
+  
+                    @media (max-width: 320px) {
+                        font-size: 14px;
+                        width: 100px;
+                        left: 17%;
+                        height: 35px;
+                    }
                 }
             }
         }
