--- a/src/components/Skill/styles.module.scss
+++ b/src/components/Skill/styles.module.scss
@@ -60,12 +60,28 @@
         border-radius: 12px 0 0 0;
         padding: 20px;
 
+        @media (max-width: 425px) {
+          width: 120px;
+        }
+        
+        @media (max-width: 375px) {
+          width: 90px;
+        }
+        
+        @media (max-width: 320px) {
+          width: 80px;
+        }
+
         p {
           color: var(--LightCyan);
           margin-top: 10px;
           font-family: var(--heading-font);
           font-size: 22px;
           font-weight: 500;
+
+          @media (max-width: 320px) {
+            font-size: 20px;
+          }
         }
 
         .icons {
