--- a/src/components/Portfolio/myProjects/styles.module.scss
+++ b/src/components/Portfolio/myProjects/styles.module.scss
@@ -122,17 +122,17 @@ article {
                     }
                     
                     @media (max-width: 425px) {
-                        width: 100%;
+                        min-width: 100%;
                         height: 200px;
                     }
                     
                     @media (max-width: 375px) {
-                        width: 100%;
+                        min-width: 100%;
                         height: 200px;
                     }
                     
                     @media (max-width: 320px) {
-                        width: 100%;
+                        min-width: 100%;
                         height: 200px;
                     }
                 }
